[package]
name = "toadml"
version = "0.1.0"
authors = ["Matthis Kruse <s8makrus@stud.uni-saarland.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
log = "0.4.17"
rustyline = "9.1.2"
colored = "2.0.0"
home = "0.5.3"
typed-arena = "2.0.1"
codespan-reporting = "0.11.1"
